--- a/dashboard/templates/dashboard/main.html
+++ b/dashboard/templates/dashboard/main.html
@@ -36,15 +36,15 @@
         <p class="statBoxContainer1Paragraph">Highest Post Total</p>
     </div>
     <div class="statBoxContainer1 shadow-lg">
-        <h1 class="statBoxContainer1Header">234</h1>
+        <h1 class="statBoxContainer1Header">-</h1>
         <p class="statBoxContainer1Paragraph">Todays Visitors</p>
     </div>
     <div style="background: linear-gradient(180deg, #4880ED 0%, #11BCE1 100%);" class="statBoxContainer1 shadow-lg">
-        <h1 class="statBoxContainer1Header">{{visitedTotal}}</h1>
+        <h1 class="statBoxContainer1Header">{{countusers}}</h1>
         <p class="statBoxContainer1Paragraph">All Time Vistitors</p>
     </div>
     <div style="background: linear-gradient(191.68deg, #F44C6A 23.97%, #ED48BF 91.43%);" class="statBoxContainer1 shadow-lg">
-        <h1 class="statBoxContainer1Header">874</h1>
+        <h1 class="statBoxContainer1Header">-</h1>
         <p class="statBoxContainer1Paragraph">Total This Month</p>
     </div>
 
