--- a/dashboard/templates/sidebar.html
+++ b/dashboard/templates/sidebar.html
@@ -8,7 +8,8 @@
 <div class="sidebar">
 
 <div class="badge bg-light  text-center py-md-3 px-md-3 w-75 mx-auto AdminProfileHeader">
-    {{request.user}}
+    
+    <a class="text-white sidebar-link" href="{% url 'website:home' %}">Website</a>
     </div>
 <div class=" sectionContent ">
 
