--- a/website/templates/header.html
+++ b/website/templates/header.html
@@ -182,7 +182,7 @@ margin-top: 4.7vh;
 
 
 <!-- -==========================================HEADER========================================== -->
-<header style="display: block; position: relative; background-color: #FCE1C7;" class=" ">
+<header style="display: block; position: relative; background-color: #ffffff;" class=" ">
 
   
     <button data-toggle="modal" data-target="#exampleModal" id="buttonHeaderID"
